--- a/app/views/backoffice/classrooms/shareds/_form.html.erb
+++ b/app/views/backoffice/classrooms/shareds/_form.html.erb
@@ -4,7 +4,7 @@
             <div class="card-panel">
                 <div class="row">
                     <div class="col s12">
-                        <h4 class="header2">Informações da Classe</h4>
+                        <h4 class="header2"><%= action %></h4>
                     </div>
 
                 </div>
@@ -21,7 +21,7 @@
 
                                     <div class="input-field col s12 m6">
 
-                                        <%= collection_select(:classroom, :teacher_id, Teacher.all, :id, :email,{include_blank: "Escolha um Professor", disabled: true}) %>
+                                        <%= collection_select(:classroom, :teacher_id, Teacher.all, :id, :name,{include_blank: "Escolha um Professor", disabled: true}) %>
 
                                             <label>Professores</label>
                                     </div>
@@ -32,11 +32,17 @@
                         <div class="row">
                             <button type="submit" class="btn btn-waves  ">Salvar</button>
                         </div>
-                        <% end %>
+                    <% end %>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function() {
+        $('select').material_select();
+    });
+</script>
 
 <%= render  "layouts/shareds/loader" %>
