--- a/app/views/backoffice/home/index.html.erb
+++ b/app/views/backoffice/home/index.html.erb
@@ -3,12 +3,9 @@
     <div class="container">
         <br>
         <br>
-        <h2 class="header center orange-text">Bubbo</h2>
+        <h2 class="header center orange-text">Bem vndo!</h2>
         <div class="row center">
-            <h5 class="header col s12 light"> O aplicativo ideial para avaliação de rendimento escolar</h5>
-        </div>
-        <div class="row center">
-            <button type"button" id="download-button" class="btn-large waves-effect waves-light orange">Saiba mais</button>
+            <h5 class="header col s12 light"> Em breve mais informacções sobre o sitema serão divulgadas aqui!</h5>
         </div>
         <br>
         <br>
@@ -17,49 +14,4 @@
 </div>
 
 
-<div class="container">
-    <div class="section">
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text">
-                        <i class="material-icons large">flash_on</i>
-                    </h2>
-                    <h5 class="center">Resultados rapidos</h5>
-                    <p class="light">O sistema de avaliação do bubbo é capaz de fornecer informações rapidas e precisas sobre a absorção de
-                        conteudo em sala de aula. Fazendo com que o professor tenha acesso aos dados fornecidos de maneira
-                        simples e eficiente.</p>
-                </div>
-            </div>
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text">
-                        <i class="material-icons large">games</i>
-                    </h2>
-                    <h5 class="center">Sistema de conquistas</h5>
-
-                    <p class="light">Bubbo conta com um sistema de conqusitas capaz de tornar o uso da aplição algo mais divertido. As conquistas
-                        podem ser obtidas como recomponsas ao concluir determinados objetivos listados no App.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text">
-                        <i class="material-icons large">settings</i>
-                    </h2>
-                    <h5 class="center">Facil de usar</h5>
-
-                    <p class="light">Alem da facilidade e simplicidade da utilização do App. nós ainda lhe oferecemos uma documentação completa
-                        acompanhada de imagens para o melhor entendimento e ainda contamos com nosso suporte para auxilia-lo
-                        a encontrar e resolver duvidas que possam surgir.</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <br>
-    <br>
-</div>
 <%= render  "layouts/shareds/loader" %>
