changed the background color to deep-purple

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -9,7 +9,7 @@
    
   </head>
 
-  <body class="light-blue darken-4">
+  <body class="deep-purple">
     <div id="loader-wrapper">
       <div id="loader"></div>        
       <div class="loader-section section-left "></div>
