--- a/app/views/backoffice/questionnaires/shareds/_form.html.erb
+++ b/app/views/backoffice/questionnaires/shareds/_form.html.erb
@@ -9,9 +9,13 @@
     
                     </div>
                     <div class="row">
+                        <div>
+                            <input type="text" id="questionnaire_id" hidden="true" value="<%= @questionnaire.id %>">
+                        </div>
                         <%= form_for([:backoffice, @questionnaire]) do |f| %>
     
                             <div class="row">
+
                                 <div class="col s12">
                                     <div>
                                             <%= f.text_field :teacher_id, value:current_teacher.id, hidden:"true" %>
