--- a/app/views/layouts/shareds/_backoffice_footer.html.erb
+++ b/app/views/layouts/shareds/_backoffice_footer.html.erb
@@ -1,12 +1,9 @@
 <footer class="page-footer gradient-45deg-indigo-purple">
     <div class="footer-copyright">
         <div class="container">
-        <span>Copyright © 2017
-            <a class="grey-text text-lighten-2" href="http://themeforest.net/user/pixinvent/portfolio?ref=pixinvent"
-            target="_blank">PIXINVENT</a> All rights reserved.</span>
-        <span class="right hide-on-small-only"> Design and Developed by
-            <a class="grey-text text-lighten-2" href="https://pixinvent.com/">PIXINVENT</a>
-        </span>
+            Projeto realizado como trabalho da disciplina de conclusão de curso da faculdade
+            <a class="orange-text text-lighten-3"
+                href="http://www.fafit.com.br">FAFIT</a>
         </div>
     </div>
 </footer>
