fix welcome message

--- a/app/views/backoffice/home/index.html.erb
+++ b/app/views/backoffice/home/index.html.erb
@@ -3,9 +3,9 @@
     <div class="container">
         <br>
         <br>
-        <h2 class="header center orange-text">Bem vndo!</h2>
+        <h2 class="header center orange-text">Bem vindo!</h2>
         <div class="row center">
-            <h5 class="header col s12 light"> Em breve mais informacções sobre o sitema serão divulgadas aqui!</h5>
+            <h5 class="header col s12 light"> Em breve mais informações sobre o sitema serão divulgadas aqui!</h5>
         </div>
         <br>
         <br>
