--- a/app/views/layouts/shareds/_aside.html.erb
+++ b/app/views/layouts/shareds/_aside.html.erb
@@ -77,6 +77,21 @@
             </ul>
           </div>
         </li>
+        <!-- <li class="bold">
+          <a class="collapsible-header waves-effect waves-cyan">
+            <i class="material-icons">web</i>
+            <span class="nav-text">Questionarios</span>
+          </a>
+          <div class="collapsible-body">
+            <ul>
+              <li>
+                <%= link_to  backoffice_questionnaires_path do %>
+                <i class="material-icons">keyboard_arrow_right</i>
+                <span> Novo </span>
+                <% end%>
+            </ul>
+          </div>
+        </li> -->
       </ul>
     </li>
   </ul>
