--- a/app/views/layouts/shareds/_backoffice_nav.html.erb
+++ b/app/views/layouts/shareds/_backoffice_nav.html.erb
@@ -2,7 +2,7 @@
     <div class="navbar-fixed">
         <nav class="gradient-45deg-indigo-purple">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo center">Bubbo</a>
+                <p  class="brand-logo center ">Bubbo</p>
             </div>
         </nav>
     </div>
